# ukhova

./: CMakeLists.txt  README.md
course work/: CMakeLists.txt  C_W.cpp  readme.txt
course work/Surf/: Surf.VC.db  Surf.sln  Surf.vcxproj  main.cpp
course work/Surf/x64/Debug/: Surf.ilk  Surf.vcxproj.FileListAbsolute.txt  vc142.idb
course work/Surf/x64/Debug/Surf.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Surf.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
course work/System Volume Information/: IndexerVolumeGuid
prj.lab/lab01/: lab01.cpp  lab01.report.md.in.txt
prj.lab/lab02/: lab02.cpp  lab02.report.md.in.txt
prj.lab/lab03/: lab03.cpp  lab03.report.md.in.txt
prj.lab/lab04/: CMakeLists.txt  lab04.cpp  lab04.report.md.in.txt
ukhova_a_v/: CMakeLists.txt  Lab_1.cpp  Lab_2.cpp  Lab_3.cpp  Lesson_1.cpp  Lesson_2_Part_1.cpp  Lesson_2_Part_2.cpp  Uhova_AV_lab01.md  k_r.cpp
